--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -531,15 +531,15 @@
                                 <h6>Follow</h6>
                                 <ul>
                                     <li class="twitter">
-                                        <a href="#" class="link-underline">
+                                        <a target="_blank" href="https://github.com/set404" class="link-underline">
                                             <i class="fab fa-github"></i>
                                             <span>Github</span>
                                         </a>
                                     </li>
                                     <li class="facebook">
-                                        <a href="#" class="link-underline">
-                                            <i class="fab fa-facebook"></i>
-                                            <span>Facebook</span>
+                                        <a target="_blank" href="https://t.me/Artem_Moore" class="link-underline">
+                                            <i class="fab fa-telegram"></i>
+                                            <span>Telegram</span>
                                         </a>
                                     </li>
                                 </ul>
