--- a/src/main/resources/templates/user/offers.html
+++ b/src/main/resources/templates/user/offers.html
@@ -168,7 +168,7 @@
                     <li>
                         <a id="datepicker8" th:href="@{/report}" class=" waves-effect">
                             <i class="ri-table-2"></i>
-                            <span>Monthly Report</span>
+                            <span>Report</span>
                         </a>
                     </li>
 
