--- a/src/main/resources/templates/user/offers.html
+++ b/src/main/resources/templates/user/offers.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8"/>
-    <title>Report | AdsMetrika - End-to-End analytics service </title>
+    <title>Offers | AdsMetrika - End-to-End analytics service </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description"/>
     <meta content="Themesdesign" name="author"/>
@@ -231,7 +231,16 @@
                     <div class="col-12">
                         <div class="page-title-box d-sm-flex align-items-center justify-content-between">
                             <h4 class="mb-sm-0">Editable offers list</h4>
-
+                            <div th:if="${param.error}" class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <i class="mdi mdi-block-helper me-2"></i>
+                                Adcombo id or group name should`t be empty
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                            <div th:if="${param.success}" class="alert alert-success alert-dismissible fade show" role="alert">
+                                <i class="mdi mdi-check-all me-2"></i>
+                                Success
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
                                     <li class="breadcrumb-item"><a href="javascript: void(0);">Offers</a></li>
