--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -24,11 +24,11 @@
           type="text/css"/>
 
     <!-- Bootstrap Css -->
-    <link th:href="@{assets/css/bootstrap-dark.min.css}" id="bootstrap-style" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/bootstrap-dark.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/>
     <!-- Icons Css -->
     <link th:href="@{assets/css/icons.min.css}" rel="stylesheet" type="text/css"/>
     <!-- App Css-->
-    <link th:href="@{assets/css/app.min.css}" id="app-style" rel="stylesheet" type="text/css"/>
+    <link th:href="@{assets/css/app-dark.min.css}" id="app-style" rel="stylesheet" type="text/css"/>
 
 </head>
 
@@ -500,7 +500,7 @@
                                 <div style="margin-bottom: 50px;" class="table-responsive">
                                     <h4 class="card-title mb-4">
                                         Combined Offer Statistics</h4>
-                                    <table id="scroll-vertical-datatable" class="table table-centered mb-0 align-middle table-hover table-nowrap">
+                                    <table id="selection-datatable" class="table table-centered mb-0 align-middle table-hover table-nowrap">
                                         <thead class="table-light">
                                         <tr>
                                             <th>Campaign ID</th>
