--- a/src/main/resources/templates/user/report.html
+++ b/src/main/resources/templates/user/report.html
@@ -30,7 +30,7 @@
     <!-- Icons Css -->
     <link href="../assets/css/icons.min.css" rel="stylesheet" type="text/css"/>
     <!-- App Css-->
-    <link href="../assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/app-dark.min.css" id="app-style" rel="stylesheet" type="text/css"/>
 
 </head>
 
